# GeminiVoiceAgent

./: GPTraw.py  README.md  new.py  pyproject.toml  rawNeura.py  requirements.txt
static/: java.js  style.css
templates/: index.html
